@@ -1,1 +1,13 @@
-SUBDIRS = test lorenz stiff mechanical bench bistable performance newton modeling radiation-diffusion medical-akzonobel
+SUBDIRS = bench \
+          bistable \
+          complex \
+          homotopy \
+          lorenz \
+          mechanical \
+          medical-akzonobel \
+          modeling \
+          newton \
+          performance \
+          radiation-diffusion \
+          stiff \
+          test
